# dealerless-FSS_public

./: .gitignore  CMakeLists.txt  LICENSE  README.md
2pc_test/: CMakeLists.txt  MUXtest.cpp  README.md  data_test.cpp  overhead.cpp
2pc_test/AND_TEST/: ANDtest.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
2pc_test/BB_TEST/: BuildingBlock_Test.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
2pc_test/CASE_STUDIES/: Biometric.cpp  Proximity.cpp  ULP.cpp
2pc_test/CORRECTNESS_TEST/: CMakeLists.txt  Correctness_Test.cpp
2pc_test/GEN_TEST/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  genTest.cpp
2pc_test/MUX_TEST/: CMakeCache.txt  CMakeLists.txt  MUXtest.cpp  Makefile  cmake_install.cmake
2pc_test/Proximity/: Biometric.cpp  CMakeCache.txt  CMakeLists.txt  Makefile  PROX_TEST  Proximity.cpp  cmake_install.cmake
2pc_test/SAFETY_TEST/: CMakeLists.txt  Safety_Perf_Test.cpp
2pc_test/SIN_TEST/: CMakeCache.txt  CMakeLists.txt  Makefile  SINtest.cpp  cmake_install.cmake
2pc_test/TRI_TEST/: CMakeLists.txt  SINtest.cpp
docs/: README.md  developer-usage.md
scripts/: run_correctness.sh  run_dfss_ext_bench.sh  run_safety_perf.sh  summarize_dfss_ext_bench.py
secfloat_benchmark/src/FloatingPoint/: fp-math.cpp  fp-math.h
secfloat_benchmark/tests/: test_float_bench_op.cpp  test_float_math.cpp
src/: 2pc_api.cpp  2pc_api.h  2pc_cleartext.cpp  2pc_cleartext.h  2pc_dcf.cpp  2pc_dcf.h  2pc_idpf.cpp  2pc_idpf.h  2pc_math.cpp  2pc_math.h  2pcwrapper.cpp  2pcwrapper.h  AESBenchmark.cpp  CMakeLists.txt  README.md  api.cpp  api.h  comms.cpp  comms.h  dcf.cpp  group_element.h  keypack.h  utils.cpp  utils.h
src/buildingblock/: comparison.cpp  comparison.h  digit_decomposition.cpp  digit_decomposition.h  equality.cpp  equality.h  lut.cpp  lut.h  mic.cpp  mic.h  modular.cpp  modular.h  ring_extension.cpp  ring_extension.h  truncation.cpp  truncation.h
src/commons/: keypack.h  public_data.cpp  public_data.h  types.h  utils.cpp  utils.h
src/fss/: dpf.cpp  dpf.h  fss_wrapper.cpp  fss_wrapper.h  idpf.cpp  idpf.h
src/fss/internal/: correlated_ggm.cpp  correlated_ggm.h  ggm.cpp  ggm.h  payload_conversion.cpp  payload_conversion.h
src/legacy/: CMakeLists.txt  README.md  basic_ops.cpp  basic_ops.h  cleartext.cpp  cleartext.h  comparison.cpp  comparison.h  containment.cpp  containment.h  dcf.cpp  dcf.h  dpf.cpp  dpf.h  keypack.h  lut.cpp  lut.h  math.cpp  math.h  spline_approx.cpp  spline_approx.h  utils.cpp  utils.h
src/legacy/benchmark/: CMakeLists.txt
src/legacy/benchmark/buildingblock/: BuildingBlock_Test.cpp  CMakeLists.txt
src/legacy/benchmark/case_studies/: Biometric.cpp  CMakeLists.txt  Proximity.cpp  ULP.cpp
src/legacy/benchmark/safety/: CMakeLists.txt  Safety_Perf_Test.cpp
src/legacy/benchmark/trig/: CMakeLists.txt  SINtest.cpp
src/legacy/correctness/: CMakeLists.txt  Legacy_Correctness_Test.cpp  legacy_api_correctness.cpp  legacy_correctness_common.h  math_correctness.cpp  test_common.h
src/legacy/scripts/: run_legacy_bench.sh  run_legacy_correctness.sh
src/math/: luteval.cpp  luteval.h  polyeval.cpp  polyeval.h
src/mpc/: api.cpp  api.h  comms.cpp  comms.h  secure_ops.cpp  secure_ops.h
test/: README.md
test/benchmark/: CMakeLists.txt  benchmark.cpp
test/benchmark/helper/: cli.cpp  cli.h  common.cpp  common.h  report.cpp  report.h
test/benchmark/microbench/: payload_conversion.cpp
test/benchmark/protocol/: benchmarks.h  buildingblocks.cpp  dpf.cpp  et.cpp
test/correctness/: CMakeLists.txt  correctness.cpp
test/correctness/helper/: cases.cpp  cases.h  helper_correctness.cpp
test/correctness/protocol/: buildingblocks.cpp  cases.h  extensions.cpp  primitives.cpp
tools/nonlinear/: generate_material_set.py  generate_public_nonlinear_data.py  verify_material_semantics.py
tools/polyfit/: generate_piecewise_poly.py
