cmake_minimum_required(VERSION 3.13)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
set (CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -march=native -Wno-parentheses-equality -Wno-ignored-attributes -maes -msse2 -msse4.1 -mpclmul -fPIC -no-pie -lpthread")
add_executable(PROX_TEST Proximity.cpp)
find_package(OpenSSL REQUIRED)
find_package(Threads REQUIRED)
include_directories(${OPENSSL_INCLUDE_DIRS})
target_link_directories(PROX_TEST PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../src/)
target_link_libraries(PROX_TEST PRIVATE "/ezpc_dir/EzPC/FSS/build/lib/libfss.a")
target_include_directories(PROX_TEST PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/../src/deps/cryptoTools/)
target_link_libraries(PROX_TEST PRIVATE Threads::Threads)
target_link_libraries(PROX_TEST PRIVATE ${OPENSSL_LIBRARIES})
